`zero` error checking

--- a/text/overview.tex
+++ b/text/overview.tex
@@ -193,7 +193,7 @@ Invocation of the \textsc{pvm} has an exit-reason as the first item in the resul
   \item Regular program termination caused by an explicit halt instruction, $\halt$.
   \item Irregular program termination caused by some exceptional circumstance, $\panic$.
   \item Exhaustion of gas, $\oog$.
-  \item A page fault (attempt to access some address in \textsc{ram} which is not accessible), $\fault$. This includes the address at fault.
+  \item A page fault (attempt to access some address in \textsc{ram} which is not accessible), $\fault$. This includes the address of the page at fault.
   \item An attempt at progressing a host-call, $\host$. This allows for the progression and integration of a context-dependent state-machine beyond the regular \textsc{pvm}.
 \end{itemize}
 
