--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -573,7 +573,7 @@ Note, the term $h$ above refers to the beginning of the heap, the second major s
   171&\token{sub\_32}&0&$\reg'_D = \sext_4((\reg_A + 2^{32} - (\reg_B \bmod 2^{32})) \bmod 2^{32})$\\ \mrule
   172&\token{mul\_32}&0&$\reg'_D = \sext_4((\reg_A \cdot \reg_B) \bmod 2^{32})$\\ \mrule
   173&\token{div\_u\_32}&0&$\reg'_D = \begin{cases}
-    2^{64} - 1 &\when \reg_B = 0\\
+    2^{64} - 1 &\when \reg_B \bmod 2^{32} = 0\\
     \floor{(\reg_A \bmod 2^{32}) \div (\reg_B \bmod 2^{32})} &\otherwise
   \end{cases}$\\ \mrule
   174&\token{div\_s\_32}&0&$\reg'_D = \begin{cases}
