Main alterations for 0.5 (#135)
* Version

* Definitions: Q is exact, not a maximum.

* PVM Hostcalls: Fix gas spec for quit

* Reporting: Fix usage of theta

* Merklisation: Make the byte selection explicit for solicits.

* Numbering is by section

* PVM Invocations: u_d not d

* Intro: Edits

* Have the segment-count in the Availability Specifier

* Extrinsic Commitment should be hash of hashes

* Post-Accumulate Preimage Integration

* Availability may apply only to timely reports

* PVM memory retains accessibility only in discrete pages.

* Introduce zero-memory and void-memory hostcalls

* Enable zero & void hostcalls

* Preamble

* Preimages made recently invalid don't invalidate the block

* voiding inner PVM RAM should zero it

* Reframe size-synchrony antagonism for size-coherency

* Update memory layout in terms of accessibility (now indexed by page)

* Rewire the zero/void hostcalls

* Fixes

* For extrinsic commitment, hash the bare report, not the guaranteed report.

* 64-bit PVM (#136)

* 64-bit registers

* Initial alterations to PVM

* Instructions with Arguments of One Register & One Immediate.

* Instructions with Arguments of One Register, One Immediate and One Offset

* Instructions with Arguments of Two Registers & One Immediate.

* Instructions with Arguments of Three Registers.

* Instructions with Arguments of One Extended Width Immediate

* Renumber instructions simply

* PVM: Simplify expression

* Wording, subseqeq for memory access tests not in

* otherwhen is when

* Don't forget the +

* Don't forget the + again

* 64-bit PVM corrections

* `zero` error checking

* Host call results are at top of 2^64 range.

* Some other host-call improvements for 64-bit

* Fix div_u_32 zero shortcut

* Sign extend 32 bit arithmetic ops

* rem_u_32 signed ext

--- a/preamble.tex
+++ b/preamble.tex
@@ -30,6 +30,10 @@
 \usepackage{ifthen}
 \usepackage{hyperref}
 \usepackage{changepage}
+
+\numberwithin{equation}{section}
+\renewcommand{\theequation}{\thesection.\arabic{equation}}
+
 \strictpagecheck
 \addbibresource{biblio.bib}
 
@@ -175,11 +179,16 @@
 \newcommand*{\defxfers}{\seq{\defxfer}}
 \newcommand*{\beefycommitmap}{\mathbf{C}}
 
+\newcommand*{\accountspre}{\delta}
+\newcommand*{\accountspostacc}{\delta^\dagger}
+\newcommand*{\accountspostxfer}{\delta^\ddagger}
+\newcommand*{\accountspostpreimage}{\delta'}
+
 \newcommand*{\gascounter}{\varrho}
 \newcommand*{\registers}{\omega}
 \newcommand*{\memory}{\mu}
 
-\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!\! Bangkok}
+\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!\!}
 \newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
 \newcommand*{\makegpbackground}{
@@ -194,7 +203,7 @@
 }
 \input{context.tex}
 
-\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft \jamdraftversionstring\ -\ \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft \jamdraftversionstring\ -\ \today}}
+\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft \jamdraftversionstring\ -\ \today}}]{Join-Accumulate Machine: A Mostly-Coherent Trustless Supercomputer \\ {\smaller Draft \jamdraftversionstring\ -\ \today}}
 \author{
   Dr. Gavin Wood\\
   Founder, Polkadot \& Ethereum\\%, Parity, Web3 Foundation, Fellowship\\
