--- a/text/intro.tex
+++ b/text/intro.tex
@@ -4,7 +4,7 @@
 
 %As its namesake paper pointed out, the name \emph{Polkadot} means several things depending on context. It might mean variously the product vision set forth in said paper of a scalable heterogeneous multichain; the decentralized blockchain network and service which came to be along with its state and history; or possibly the protocol and technology-base utilized in order to maintain and run this network and others such as \emph{Kusama}.
 
-In this paper, we introduce a decentralized, crypto-economic protocol to which the Polkadot Network could conceivably transition itself in a major revision. Following this eventuality (which must not be taken for granted since Polkadot is a decentralized network) this protocol might also become known as \emph{Polkadot} or some derivation thereof. However, at this stage this is not the case, therefore our proposed protocol will for the present be known as \Jam.
+In this paper, we introduce a decentralized, crypto-economic protocol to which the Polkadot Network will transition itself in a major revision on the basis of approval by its governance apparatus.
 
 An early, unrefined, version of this protocol was first proposed in Polkadot Fellowship \textsc{rfc}\oldstylenums{31}, known as \emph{CoreJam}. CoreJam takes its name after the collect/refine/join/accumulate model of computation at the heart of its service proposition. While the CoreJam \textsc{rfc} suggested an incomplete, scope-limited alteration to the Polkadot protocol, \Jam refers to a complete and coherent overall blockchain protocol.
 
@@ -27,19 +27,20 @@ Beyond resilience and generality, things get more interesting, and we must look 
 
 As a declared Web3 technology, we make an implicit assumption of the first two items. Interestingly, items \ref{enum:performance} and \ref{enum:coherency} are antagonistic according to an information theoretic principle which we are sure must already exist in some form but are nonetheless unaware of a name for it. For argument's sake we shall name it \emph{size-synchrony antagonism}.
 
-\subsection{Scaling under Size-Synchrony Antagonism}
+\subsection{Scaling under Size-Coherency Antagonism}
 
-Size-synchrony antagonism is a simple principle implying that as the state-space of information systems grow, then the system necessarily becomes less synchronous. The argument goes:
+Size-coherency antagonism is a simple principle implying that as the state-space of information systems grow, then the system necessarily becomes less coherent. It is a direct implication of principle that causality is limited by speed. The maximum speed allowed by physics is $C$ the speed of light in a vacuum, however other information systems may have lower bounds: In biological system this is largely determined by various chemical processes whereas in electronic systems is it determined by the speed of electrons in various substances. Distributed software systems will tend to have much lower bounds still, being dependent on a substrate of software, hardware and packet-switched networks of varying reliability.
 
+The argument goes:
 \begin{enumerate}
   \item The more state a system utilizes for its data-processing, the greater the amount of space this state must occupy.
   \item The more space used, then the greater the mean and variance of distances between state-components.
-  \item As the mean and variance increase, then interactions become slower and subsystems must manage the possibility that distances between interdependent components of state could be materially different, requiring asynchrony.
+  \item As the mean and variance increase, then time for causal resolution (i.e. all correct implications of an event to be felt) becomes divergent across the system, causing incoherence.
 \end{enumerate}
 
-This assumes perfect coherency of the system's state. Setting the question of overall security aside for a moment, we can avoid this rule by applying the \emph{divide and conquer} maxim and fragmenting the state of a system, sacrificing its coherency. We might for example create two independent smaller-state systems rather than one large-state system. This pattern applies a step-curve to the principle; intra-system processing has low size and high synchrony, inter-system processing has high size but low synchrony. It is the principle behind meta-networks such as Polkadot, Cosmos and the predominant vision of a scaled Ethereum (all to be discussed in depth shortly).
+Setting the question of overall security aside for a moment, we can manage incoherence by fragmenting the system into causally-independent subsystems, each of which is small enough to be coherent. In a resource-rich environment, a bacterium may split into two rather than growing to double its size. This pattern is rather a crude means of dealing with incoherency under growth: intra-system processing has low size and total coherence, inter-system processing supports higher overall sizes but without coherence. It is the principle behind meta-networks such as Polkadot, Cosmos and the predominant vision of a scaled Ethereum (all to be discussed in depth shortly). Such systems typically rely on asynchronous and simplistic communication with ``settlement areas'' which provide a small-scoped coherent state-space to manage specific interactions such as a token transfer.
 
-The present work explores a middle-ground in the antagonism, avoiding the persistent fragmentation of state-space of the system as with existing approaches. We do this by introducing a new model of computation which pipelines a highly scalable element to a highly synchronous element. Asynchrony is not avoided, but we do open the possibility for a greater degree of granularity over how it is traded against size. In particular fragmentation can be made ephemeral rather than persistent, drawing upon a coherent state and fragmenting it only for as long as it takes to execute any given piece of processing on it.
+The present work explores a middle-ground in the antagonism, avoiding the persistent fragmentation of state-space of the system as with existing approaches. We do this by introducing a new model of computation which pipelines a highly scalable, \emph{mostly coherent} element to a synchronous, fully coherent element. Asynchrony is not avoided, but we bound it to the length of the pipeline and substitute the crude partitioning we see in scalable systems so far with a form of ``cache affinity'' as it typically seen in multi-\textsc{cpu} systems with a shared \textsc{ram}.
 
 Unlike with \textsc{snark}-based L2-blockchain techniques for scaling, this model draws upon crypto-economic mechanisms and inherits their low-cost and high-performance profiles and averts a bias toward centralization.
 
