--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -96,9 +96,10 @@
   \item[$\Omega$] Virtual machine host-call functions. See appendix \ref{sec:virtualmachineinvocations}. %	Ω
   \begin{description}
     \item[$\Omega_A$] Assign-core host-call.
+    \item[$\Omega_B$] Empower-service host-call.
     \item[$\Omega_C$] Checkpoint host-call.
     \item[$\Omega_D$] Designate-validators host-call.
-    \item[$\Omega_E$] Empower-service host-call.
+    \item[$\Omega_E$] Export segment host-call.
     \item[$\Omega_F$] Forget-preimage host-call.
     \item[$\Omega_G$] Gas-remaining host-call.
     \item[$\Omega_H$] Historical-lookup-preimage host-call.
@@ -114,10 +115,11 @@
     \item[$\Omega_R$] Read-storage host-call.
     \item[$\Omega_T$] Transfer host-call.
     \item[$\Omega_U$] Upgrade-service host-call.
+    \item[$\Omega_V$] Void inner-\textsc{pvm} memory host-call.
     \item[$\Omega_W$] Write-storage host-call.
     \item[$\Omega_X$] Expunge-\textsc{pvm} host-call.
     \item[$\Omega_Y$] Import segment host-call.
-    \item[$\Omega_Z$] Export segment host-call.
+    \item[$\Omega_Z$] Zero inner-\textsc{pvm} memory host-call.
   \end{description}
 \end{description}
 
@@ -224,7 +226,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \end{description}
   \item[$\chi$] The privileged service indices. %	χ
   \begin{description}
-    \item[$\chi_m$] The index of the empower service.
+    \item[$\chi_m$] The index of the blessed service.
     \item[$\chi_v$] The index of the designate service.
     \item[$\chi_a$] The index of the assign service.
     \item[$\chi_\mathbf{g}$] The always-accumulate service indices and their basic gas allowance.
@@ -271,7 +273,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{N} = 2$] The number of ticket entries per validator.
   \item[$\mathsf{O} = 8$] The maximum number of items in the authorizations pool.
   \item[$\mathsf{P} = 6$] The slot period, in seconds.
-  \item[$\mathsf{Q} = 80$] The maximum number of items in the authorizations queue.
+  \item[$\mathsf{Q} = 80$] The number of items in the authorizations queue.
   \item[$\mathsf{R} = 10$] The rotation period of validator-core assignments, in timeslots.
   \item[$\mathsf{S} = 1024$] The maximum number of entries in the accumulation queue.
   \item[$\mathsf{U} = 5$] The period in timeslots after which reported but unavailable work may be replaced.
@@ -287,7 +289,8 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{Y} = 500$] The number of slots into an epoch at which ticket-submission ends.
   \item[$\mathsf{Z}_A = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
   \item[$\mathsf{Z}_I = 2^{24}$] The standard \textsc{pvm} program initialization input data size. See equation \ref{sec:standardprograminit}.
-  \item[$\mathsf{Z}_P = 2^{14}$] The standard \textsc{pvm} program initialization page size. See section \ref{sec:standardprograminit}.
+  \item[$\mathsf{Z}_G = 2^{14}$] The standard \textsc{pvm} program initialization page size. See section \ref{sec:standardprograminit}.
+  \item[$\mathsf{Z}_P = 2^{12}$] The \textsc{pvm} memory page size. See equation \ref{eq:pvmmemory}.
   \item[$\mathsf{Z}_Q = 2^{16}$] The standard \textsc{pvm} program initialization segment size. See section \ref{sec:standardprograminit}.
 \end{description}
 
